--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/integrations": "^10.0.2",
+    "axios": "^1.3.6",
     "element-plus": "^2.3.3",
+    "nprogress": "^0.2.0",
+    "qs": "^6.11.1",
+    "universal-cookie": "^4.0.4",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
