--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@tinymce/tinymce-vue": "^5.1.0",
     "@vueuse/core": "^10.1.0",
     "@vueuse/integrations": "^10.0.2",
     "axios": "^1.3.6",
@@ -18,6 +19,7 @@
     "gsap": "^3.11.5",
     "nprogress": "^0.2.0",
     "qs": "^6.11.1",
+    "tinymce": "^6.4.2",
     "universal-cookie": "^4.0.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
